--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,28 @@
 @import "./buttons.css";
 body {
-    height: 100%;
-    background-color: #BA0606;
+    height: 100vh;
+    width: 100%;
+    background: linear-gradient(30deg, #17062a, #933841);
+    background-size: 300% 300%;
     font-family: Arial, Helvetica, sans-serif;
+    animation: color 15s ease-in-out infinite;
+}
+
+@keyframes color {
+    0% {
+        background-position: 0 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0 50%;
+    }
 }
 
 .wrapper {
+    height: 100vh;
+    witch
     max-inline-size: 900px;
     margin: auto;
     bottom: 300px;
